# ai_init

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  README.md  SPEC_ai-project-init.md
src/: cli.rs  config.rs  generator.rs  git.rs  interactive.rs  main.rs  templates.rs  tools.rs  types.rs
templates/: ARCHITECTURE.md.tera  CLAUDE.md.minimal.tera  CLAUDE.md.tera  CLAUDE.md.verbose.tera  CONVENTIONS.md.tera  README.md.tera  TOOLS.md.minimal.tera  TOOLS.md.tera  gitignore.tera
tests/: integration_tests.rs
